--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsdom": "^22.1.0",
     "mongodb": "4.1",
     "mongoose": "^6.10.0",
+    "nodemailer": "^6.9.3",
     "nodemon": "^3.0.1"
   }
 }
